--- a/logstash-core/build.gradle
+++ b/logstash-core/build.gradle
@@ -109,6 +109,7 @@ dependencies {
     compile 'org.apache.logging.log4j:log4j-core:2.6.2'
     compile 'com.fasterxml.jackson.core:jackson-core:2.7.4'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.7.4'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.7.4'
     compile 'com.fasterxml.jackson.module:jackson-module-afterburner:2.7.4'
     compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:2.7.4'
     testCompile 'org.apache.logging.log4j:log4j-core:2.6.2:tests'
