wip: fluent API ??
wip: remove extra pipelines

wip: backup

wip: backup

wip: remove namespace from metrics

wip: support for custom witness and plugins

wip: introduce jetty, jersey, and start ruby conversion

wip: prety print json

wip: added pluginS and pipelineS back for seralization and symmetry

wip: add functional interface to seralize gauges, add new gague types

wip: minor refactor of metrics to support dirty flag to support conditional serialization

wip: remove dirty flag...not needed i think, but keep refactor

wip: missed a dirty flag, removed

wip: moving more metrics to java

Revert "wip: remove dirty flag...not needed i think, but keep refactor"

This reverts commit dd6ef8e70ab521be4a8fbb155e0158512b5e0bd3.

Revert "wip: missed a dirty flag, removed"

This reverts commit ec498624e256c5e460e0cc71b315de06e66b5bfd.

wip: centralize serialization and only serialize dirty data

wip: minor corrections

wip: minor fixes

wip: rebase master and fix nasty merge conflicts

wip: remove ruby witness code to experiment with namespace adaptor

wip: start work on namespace to witness adaptor

wip: adaptor for both gauge and counter

wip: add queue type

wip: added v2 of API and almost identical output for /stats/pipeline and stats/v2/pipeline

wip: v2 pipeline (for simple case) matches perfectly \o/

wip: clean up the metrics changes

wip: keep code base in sync with pending changes for 7788

wip: add ErrorWitness

wip: force Jackson version on 2.7.3 since Jersey-Jackson up's the version due to Gradle's hippie model of upgrading versions based on transitive dependencies....come on Gradle optimistic versioning isn't the Java way.

wip: passing metrics_spec

wip: backup, lots of temporary changes in here.

wip: move around and rename stuff

wip: metrics_specs passing without wonky reset

wip: agent tests pass with Witness!

wip: hijack collector push to only push to the witness, no more metrics store for :stat

wip: more refactoring

wip: java doc doc doc

wip: some

--- a/logstash-core/build.gradle
+++ b/logstash-core/build.gradle
@@ -97,15 +97,24 @@ idea {
     }
 }
 
+
 dependencies {
     compile 'org.apache.logging.log4j:log4j-api:2.6.2'
     compile 'org.apache.logging.log4j:log4j-core:2.6.2'
     runtime 'org.apache.logging.log4j:log4j-slf4j-impl:2.6.2'
-    //Ensure Jackson version here is kept in sync with version used by jrjackson gem
-    compile 'com.fasterxml.jackson.core:jackson-core:2.7.3'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.7.3'
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.7.3'
-    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:2.7.3'
+    //Ensure Jackson version here is kept in sync with version used by jrjackson gem, don't allow transitive's to upgrade
+    compile ('com.fasterxml.jackson.core:jackson-core:2.7.3') { force = true}
+    compile ('com.fasterxml.jackson.core:jackson-databind:2.7.3') { force = true}
+    compile ('com.fasterxml.jackson.core:jackson-annotations:2.7.3') { force = true}
+    compile ('com.fasterxml.jackson.module:jackson-module-afterburner:2.7.3') { force = true}
+    compile ('com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:2.7.3') { force = true}
+    compile 'org.eclipse.jetty:jetty-servlet:9.4.6.v20170531'
+    compile 'org.eclipse.jetty:jetty-server:9.4.6.v20170531'
+    compile 'org.eclipse.jetty:jetty-util:9.4.6.v20170531'
+    compile 'org.glassfish.jersey.core:jersey-server:2.25.1'
+    compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.25.1'
+    compile 'org.glassfish.jersey.containers:jersey-container-jetty-http:2.25.1'
+    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.25.1'
     testCompile 'org.apache.logging.log4j:log4j-core:2.6.2:tests'
     testCompile 'org.apache.logging.log4j:log4j-api:2.6.2:tests'
     testCompile 'junit:junit:4.12'
