--- a/config/logstash.yml
+++ b/config/logstash.yml
@@ -181,7 +181,7 @@
 # If using dead_letter_queue.enable: true, the directory path where the data files will be stored.
 # Default is path.data/dead_letter_queue
 #
-# path.dead_letter_queue:
+path.dead_letter_queue: "/tmp/foobar"
 #
 # ------------ Metrics Settings --------------
 #
