--- a/Gemfile.template
+++ b/Gemfile.template
@@ -4,6 +4,7 @@
 source "https://rubygems.org"
 gem "logstash-core", :path => "./logstash-core"
 gem "logstash-core-plugin-api", :path => "./logstash-core-plugin-api"
+gem "atomic", "<= 1.1.99"
 gem "paquet", "~> 0.2.0"
 gem "ruby-progressbar", "~> 1.8.1"
 gem "builder", "~> 3.2.2"
